# CapShell

./: LICENSE  README.md  README_cn.md  package.json
.github/: dependabot.yml
.github/workflows/: github-actions.yml
src/: camera.html  index.html  test.html
src-tauri/: Cargo.toml  default_config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  utils.rs  window.rs
src/assets/css/: camera.css  styles.css
src/assets/js/: capabilities.js  index.js  sdk.js
